[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/PlayerRunning-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/PlayerArm-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/PlayerCloak-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/tileset01.png" type="Texture" id=4]
[ext_resource path="res://PlayerController.gd" type="Script" id=5]
[ext_resource path="res://Gem.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=6]
resource_name = "BodyRunning"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[sub_resource type="Animation" id=8]
resource_name = "ArmRunning"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "ArmRunning"

[sub_resource type="Animation" id=3]
resource_name = "CloakIdle"
length = 0.55
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Cloak:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Falling"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cloak:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cloak:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="TileSet" id=2]
0/name = "tileset01.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 96, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tileset01.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 96, 128 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileset01.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 96, 128 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 48, 24 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
hframes = 4

[node name="BodyAnimation" type="AnimationPlayer" parent="Player/Body"]
anims/BodyRunning = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 1 )
z_index = 1
shape = SubResource( 1 )

[node name="Arm" type="Sprite" parent="Player"]
texture = ExtResource( 2 )
hframes = 3

[node name="ArmAnimation" type="AnimationPlayer" parent="Player/Arm"]
anims/ArmRunning = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Cloak" type="Sprite" parent="Player"]
z_index = -2
texture = ExtResource( 3 )
hframes = 6

[node name="CloakAnimation" type="AnimationPlayer" parent="Player/Cloak"]
root_node = NodePath("../..")
anims/ArmRunning = SubResource( 5 )
anims/CloakIdle = SubResource( 3 )
anims/Falling = SubResource( 13 )
anims/RESET = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 0.15, 19.1 )
scale = Vector2( 1.02083, 0.96875 )
polygon = PoolVector2Array( -0.146939, 13.3161, -0.146939, 228.026, 15.5265, 228.026, 15.5265, 244.542, 46.8735, 244.542, 46.8735, 277.574, 62.5469, 277.574, 62.5469, 294.09, 78.2204, 294.09, 78.2204, 310.606, 93.8939, 310.606, 93.8939, 327.123, 140.914, 327.123, 140.914, 343.639, 297.649, 343.639, 297.649, 325.498, 376.016, 327.123, 376.016, 310.606, 391.69, 310.606, 391.69, 277.574, 407.363, 277.574, 407.363, 244.542, 423.037, 244.542, 423.037, 95.8968, 438.71, 95.8968, 438.71, 29.8323, 423.037, 29.8323, 423.037, 13.3161, 328.996, 13.3161, 328.996, 29.8323, 344.669, 29.8323, 344.669, 46.3484, 376.016, 46.3484, 376.016, 62.8645, 391.69, 62.8645, 391.69, 79.3807, 328.996, 79.3807, 328.996, 95.8968, 391.69, 95.8968, 391.69, 178.477, 266.302, 178.477, 266.302, 194.994, 376.016, 194.994, 376.016, 228.026, 360.343, 228.026, 360.343, 261.058, 328.996, 261.058, 328.996, 277.574, 297.649, 277.574, 297.649, 294.09, 219.282, 294.09, 219.282, 277.574, 187.935, 277.574, 187.935, 294.09, 172.261, 294.09, 172.261, 277.574, 125.241, 277.574, 125.241, 261.058, 109.567, 261.058, 109.567, 244.542, 93.8939, 244.542, 93.8939, 228.026, 62.5469, 228.026, 62.5469, 211.51, 46.8735, 211.51, 46.8735, 194.994, 156.588, 194.994, 156.588, 178.477, 46.8735, 178.477, 46.8735, 112.413, 125.241, 112.413, 125.241, 95.8968, 46.8735, 95.8968, 46.8735, 29.8323, 93.8939, 29.8323, 93.8939, 13.3161 )

[node name="TileMap" type="TileMap" parent="StaticBody2D"]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( 131072, 2, 393219, 131073, 2, 5, 131074, 2, 327681, 131075, 2, 65536, 131076, 2, 65536, 131077, 2, 65537, 131093, 2, 1, 131094, 2, 327682, 131095, 2, 5, 131096, 2, 5, 131097, 2, 5, 131098, 2, 393220, 196608, 2, 65540, 196609, 2, 65539, 196610, 2, 4, 196630, 2, 458756, 196631, 2, 65541, 196632, 2, 262147, 196633, 2, 65539, 196634, 2, 262145, 196635, 2, 393220, 262144, 2, 65540, 262145, 2, 65539, 262146, 2, 4, 262168, 2, 458756, 262169, 2, 262147, 262170, 2, 65539, 262171, 2, 4, 327680, 2, 65540, 327681, 2, 65539, 327682, 2, 4, 327705, 2, 65540, 327706, 2, 65539, 327707, 2, 4, 393216, 2, 65540, 393217, 2, 65539, 393218, 2, 4, 393237, 2, 1, 393238, 2, 65536, 393239, 2, 65536, 393240, 2, 65536, 393241, 2, 196611, 393242, 2, 262146, 393243, 2, 393221, 458752, 2, 65540, 458753, 2, 65539, 458754, 2, 196610, 458755, 2, 65536, 458756, 2, 65536, 458757, 2, 65536, 458758, 2, 65536, 458759, 2, 65537, 458777, 2, 65540, 458778, 2, 4, 524288, 2, 65540, 524289, 2, 65539, 524290, 2, 4, 524313, 2, 65540, 524314, 2, 4, 589824, 2, 65540, 589825, 2, 65539, 589826, 2, 4, 589849, 2, 65540, 589850, 2, 4, 655360, 2, 65540, 655361, 2, 65539, 655362, 2, 4, 655385, 2, 65540, 655386, 2, 4, 720896, 2, 65540, 720897, 2, 65539, 720898, 2, 4, 720921, 2, 65540, 720922, 2, 4, 786432, 2, 65540, 786433, 2, 65539, 786434, 2, 196610, 786435, 2, 65536, 786436, 2, 65536, 786437, 2, 65536, 786438, 2, 65536, 786439, 2, 65536, 786440, 2, 65536, 786441, 2, 65537, 786449, 2, 1, 786450, 2, 65536, 786451, 2, 65536, 786452, 2, 65536, 786453, 2, 65536, 786454, 2, 65536, 786455, 2, 65536, 786456, 2, 327682, 786457, 2, 262144, 786458, 2, 4, 851968, 2, 65540, 851969, 2, 65539, 851970, 2, 4, 851992, 2, 65540, 851993, 2, 65539, 851994, 2, 4, 917504, 2, 458756, 917505, 2, 262147, 917506, 2, 262145, 917507, 2, 393220, 917528, 2, 65540, 917529, 2, 65539, 917530, 2, 4, 983041, 2, 458756, 983042, 2, 65541, 983043, 2, 196609, 983044, 2, 5, 983045, 2, 393220, 983063, 2, 393219, 983064, 2, 262144, 983065, 2, 262146, 983066, 2, 393221, 1048579, 2, 65540, 1048580, 2, 65539, 1048581, 2, 262145, 1048582, 2, 393220, 1048599, 2, 65540, 1048600, 2, 65539, 1048601, 2, 4, 1114115, 2, 458756, 1114116, 2, 262147, 1114117, 2, 65539, 1114118, 2, 262145, 1114119, 2, 393220, 1114133, 2, 393219, 1114134, 2, 5, 1114135, 2, 262144, 1114136, 2, 262146, 1114137, 2, 393221, 1179652, 2, 458756, 1179653, 2, 262147, 1179654, 2, 65539, 1179655, 2, 262145, 1179656, 2, 5, 1179657, 2, 5, 1179658, 2, 393220, 1179660, 2, 393219, 1179661, 2, 393220, 1179667, 2, 393219, 1179668, 2, 5, 1179669, 2, 262144, 1179670, 2, 65539, 1179671, 2, 65539, 1179672, 2, 4, 1245189, 2, 458756, 1245190, 2, 262147, 1245191, 2, 65539, 1245192, 2, 65539, 1245193, 2, 65539, 1245194, 2, 262145, 1245195, 2, 5, 1245196, 2, 262144, 1245197, 2, 262145, 1245198, 2, 5, 1245199, 2, 5, 1245200, 2, 5, 1245201, 2, 5, 1245202, 2, 5, 1245203, 2, 262144, 1245204, 2, 65539, 1245205, 2, 65539, 1245206, 2, 65539, 1245207, 2, 262146, 1245208, 2, 393221, 1310726, 2, 458756, 1310727, 2, 65541, 1310728, 2, 65541, 1310729, 2, 262147, 1310730, 2, 65539, 1310731, 2, 65539, 1310732, 2, 65539, 1310733, 2, 65539, 1310734, 2, 65539, 1310735, 2, 65539, 1310736, 2, 65539, 1310737, 2, 65539, 1310738, 2, 262146, 1310739, 2, 65541, 1310740, 2, 65541, 1310741, 2, 65541, 1310742, 2, 65541, 1310743, 2, 393221, 1376265, 2, 458756, 1376266, 2, 65541, 1376267, 2, 65541, 1376268, 2, 65541, 1376269, 2, 65541, 1376270, 2, 65541, 1376271, 2, 65541, 1376272, 2, 65541, 1376273, 2, 65541, 1376274, 2, 393221 )

[node name="Gem" parent="." instance=ExtResource( 6 )]
